# pafplot

./: README.md  Untitled1.ipynb  setup.cfg  setup.py
example_data/: mashmap.paf
src/pafplot/: layout.py
